--- a/Genetic algorithm/Genetic algorithm.vcxproj
+++ b/Genetic algorithm/Genetic algorithm.vcxproj
@@ -147,13 +147,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Evolution.h" />
     <ClInclude Include="Person.h" />
+    <ClInclude Include="Population.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Evolution.cpp" />
     <ClCompile Include="Genetic algorithm.cpp" />
     <ClCompile Include="Person.cpp" />
+    <ClCompile Include="Population.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
